--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,8 @@ strum_macros = "0.25.1"
 tokio = { version = "1.29.1", features = ["full"] }
 tracing = { version = "0.1.37", features = ["log", "async-await"] }
 tracing-subscriber = "0.3.17"
+
+[profile.release]
+lto = true
+codegen-units = 1
+strip = true
