--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,12 +104,12 @@ jobs:
           #   bin: pbddns
           #   name: pbddns-Linux-s390x-gnu.tar.gz
           #   skip_tests: true
-          - os_name: NetBSD-x86_64
-            os: ubuntu-20.04
-            target: x86_64-unknown-netbsd
-            bin: pbddns
-            name: pbddns-NetBSD-x86_64.tar.gz
-            skip_tests: true
+          # - os_name: NetBSD-x86_64
+          #   os: ubuntu-20.04
+          #   target: x86_64-unknown-netbsd
+          #   bin: pbddns
+          #   name: pbddns-NetBSD-x86_64.tar.gz
+          #   skip_tests: true
           # - os_name: Windows-aarch64
           #   os: windows-latest
           #   target: aarch64-pc-windows-msvc
