--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,22 +7,22 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.4"
-cidr-utils = "0.5.10"
+cidr-utils = "0.6.1"
 clap = { version = "4.3.11", features = ["derive"] }
 dotenv = { version = "0.15.0" }
 eyre = "0.6.8"
 futures = "0.3.28"
 interfaces = "0.0.9"
-reqwest = { version = "0.11.18", features = ["serde_json", "json", "tokio-rustls", "rustls", "hyper-rustls", "rustls-tls"], default-features = false }
+reqwest = { version = "0.12.9", features = ["json", "zstd", "rustls-tls", "cookies"], default-features = false }
 serde = { version = "1.0.167", features = ["derive"] }
 serde-aux = "4.2.0"
 serde_json = { version = "1.0.100", features = ["indexmap", "preserve_order"] }
-strum = { version = "0.25.0", features = ["derive"] }
-strum_macros = "0.25.1"
+strum = { version = "0.26.3", features = ["derive"] }
+strum_macros = "0.26.4"
 tokio = { version = "1.29.1", features = ["full"] }
 tokio-util = { version = "0.7.10", features = ["rt"] }
 tracing = { version = "0.1.37", features = ["log", "async-await"] }
-tracing-subscriber = "0.3.17"
+tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
 
 [profile.release]
 lto = true
